--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "web",
-  "version": "1.0.0",
+  "name": "@trout/web",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "doppler run -- next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.4.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.3.0",
+    "@clerk/nextjs": "^4.20.0",
+    "@trout/xata": "workspace:*",
+    "@sarim.garden/ui": "^2.0.8",
+    "@types/node": "20.3.0",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@vercel/analytics": "^1.0.1",
+    "autoprefixer": "10.4.14",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.4",
+    "next": "13.4.4",
+    "postcss": "8.4.24",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "^5.1.3",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@clerk/clerk-sdk-node": "^4.10.4",
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
-    "typescript": "^5.1.3"
+    "tsconfig": "workspace:*"
   }
 }
