--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
-    "turbo": "latest"
+    "turbo": "^1.10.6"
   },
   "packageManager": "pnpm@7.15.0",
   "name": "trout"
