--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
+    "haikunator": "^2.1.2",
+    "lucide-react": "^0.255.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "^18.2.0",
