--- a/turbo.json
+++ b/turbo.json
@@ -1,4 +1,5 @@
 {
+  "globalEnv": ["NODE_ENV", "NEXT_PUBLIC_VERCEL_URL"],
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
