--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,18 +15,18 @@
     "dist"
   ],
   "dependencies": {
-    "ink": "^4.1.0",
+    "@trout/xata": "workspace:*",
+    "ink": "^4.2.0",
     "kafkajs": "^2.2.4",
-    "pastel": "^2.0.0",
+    "pastel": "^2.0.2",
     "react": "^18.2.0",
-    "zod": "^3.21.4",
-    "@trout/xata": "workspace:*"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.32",
-    "chalk": "^5.2.0",
-    "typescript": "^5.0.3",
+    "chalk": "^5.3.0",
+    "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
-    "eslint-config-custom": "workspace:*"
+    "typescript": "^5.0.3"
   }
 }
