--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,12 +4,9 @@
   "license": "MIT",
   "bin": "dist/cli.js",
   "type": "module",
-  "engines": {
-    "node": ">=16"
-  },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "tsup --config ./tsup.config.ts",
+    "dev": "pnpm run build --watch"
   },
   "files": [
     "dist"
@@ -27,6 +24,7 @@
     "chalk": "^5.3.0",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
+    "tsup": "^7.1.0",
     "typescript": "^5.0.3"
   }
 }
