--- a/turbo.json
+++ b/turbo.json
@@ -4,8 +4,11 @@
     "KAFKA_BROKER",
     "KAFKA_USERNAME",
     "KAFKA_PASSWORD",
+    "KAFKA_CLUSTER_ID",
     "NEXT_PUBLIC_VERCEL_URL",
-    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY"
+    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
+    "UPSTASH_ADMIN_API_KEY",
+    "UPSTASH_ADMIN_EMAIL"
   ],
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
