--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
     "KAFKA_PASSWORD",
     "KAFKA_CLUSTER_ID",
     "NEXT_PUBLIC_VERCEL_URL",
+    "NEXT_PUBLIC_BASE_URL",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "UPSTASH_ADMIN_API_KEY",
     "UPSTASH_ADMIN_EMAIL"
