--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@xata.io/client": "^0.24.3"
+    "@t3-oss/env-nextjs": "^0.6.0",
+    "@xata.io/client": "^0.24.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@xata.io/cli": "^0.12.6"
