--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,7 +5,7 @@
   "bin": "dist/cli.js",
   "type": "module",
   "scripts": {
-    "build": "tsup --config ./tsup.config.ts",
+    "build": "doppler run -- tsup --config ./tsup.config.ts",
     "dev": "pnpm run build --watch"
   },
   "files": [
@@ -20,6 +20,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/node": "20.3.2",
     "@types/react": "^18.0.32",
     "chalk": "^5.3.0",
     "eslint-config-custom": "workspace:*",
