--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,8 +2,18 @@
   "name": "@trout/shared",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "exports": {
+    "./server": "./src/server.ts",
+    "./isomorphic": "./src/isomorphic.ts",
+    "./client": "./src/client.ts"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./src/*"
+      ]
+    }
+  },
   "scripts": {
     "xata:generate": "xata codegen"
   },
@@ -11,11 +21,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.6.0",
     "@xata.io/client": "^0.24.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/node": "20.3.2",
     "@xata.io/cli": "^0.12.6"
   }
 }
