--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "bin": "dist/cli.js",
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "build": "doppler run -- tsup --config ./tsup.config.ts",
     "dev": "pnpm run build --watch"
