--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "tsconfig/base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "module": "Node16",
-    "moduleResolution": "Node16"
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "target": "ESNext"
   },
   "include": ["src"]
 }
