--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "reactflow": "^11.7.4",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.6",
     "zod": "^3.21.4"
