--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@sarim.garden/ui": "^2.4.1",
+    "@trout/shared": "workspace:*",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "^18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.9",
+    "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "@sarim.garden/ui": "^2.4.1",
-    "typescript": "5.1.6",
-    "@trout/shared": "workspace:*"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
