--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.4.2",
+    "@astrojs/vercel": "^3.7.0",
     "astro": "2.7.0",
     "sharp": "^0.32.1"
   }
