--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,6 +19,7 @@
     "ink": "^4.2.0",
     "kafkajs": "^2.2.4",
     "pastel": "^2.0.2",
+    "pusher-js": "^8.2.0",
     "react": "^18.2.0",
     "zod": "^3.21.4"
   },
