--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
+    "pusher": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "reactflow": "^11.7.4",
