--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@capy.supply/trout",
+  "name": "@trout.run/cli",
   "version": "0.0.0",
   "license": "MIT",
   "bin": "dist/cli.js",
