--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@upstash/qstash": "^0.3.6",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "^8.44.0",
