--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
     "haikunator": "^2.1.2",
+    "isomorphic-fetch": "^3.0.0",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
