--- a/turbo.json
+++ b/turbo.json
@@ -4,12 +4,11 @@
     "NEXT_PUBLIC_VERCEL_URL",
     "NEXT_PUBLIC_BASE_URL",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
-    "UPSTASH_ADMIN_API_KEY",
-    "UPSTASH_ADMIN_EMAIL",
     "PUSHER_APP_ID",
     "PUSHER_KEY",
     "PUSHER_SECRET",
-    "QSTASH_TOKEN"
+    "QSTASH_TOKEN",
+    "QSTASH_URL"
   ],
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
