--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,9 +7,13 @@
   "engines": {
     "node": ">=18"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "doppler run -- tsup --config ./tsup.config.ts",
-    "dev": "pnpm run build --watch"
+    "dev": "pnpm run build --watch",
+    "prepublishOnly": "pnpm run build"
   },
   "files": [
     "dist"
