--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,6 +2,7 @@
   "name": "@trout.run/docs",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev --port 3003",
     "start": "astro dev --port 3003",
