--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@trout.run/cli",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
-  "bin": "dist/cli.js",
+  "bin": "./dist/cli.js",
   "type": "module",
   "engines": {
     "node": ">=18"
