--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@sarim.garden/ui": "^2.4.1",
-    "@trout/shared": "workspace:*",
+    "@trout.run/shared": "workspace:*",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "^18.2.6",
