--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,7 @@
     "@clerk/themes": "^1.7.5",
     "@sarim.garden/ui": "^2.4.1",
     "@t3-oss/env-nextjs": "^0.6.0",
-    "@trout/shared": "workspace:*",
+    "@trout.run/shared": "workspace:*",
     "@types/node": "20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
