--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "@xata.io/client": "^0.24.3",
     "zod": "^3.21.4"
   },
