add consola for logging

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,6 +21,7 @@
     "dist"
   ],
   "dependencies": {
+    "consola": "^3.2.3",
     "ink": "^4.2.0",
     "pastel": "^2.0.2",
     "pusher-js": "^8.2.0",
