--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["react/experimental", "react-dom/experimental"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
